# image-viewer

./: .gitignore  CMakeLists.txt  README.md  image-viewer.pro
src/: core.cpp  core.h  folderhandler.cpp  folderhandler.h  main.cpp
src/data/: imagedata.h
src/events/: event_types.h  events.h  events_impl.cpp  events_impl.h  imagedataevent.cpp  imagedataevent.h  imageeventfinished.cpp  imageeventfinished.h  imageeventstarted.cpp  imageeventstarted.h  imagetaskevent.cpp  imagetaskevent.h
src/models/: imagemodel.cpp  imagemodel.h
src/qml/: main.qml
